@@ -28,4 +28,11 @@ graalvmNative {
             }
         }
     }
+    binaries {
+        all {
+            buildArgs.addAll([
+                '--add-opens=java.base/java.lang=ALL-UNNAMED'
+            ])
+        }
+    }
 }
